--- a/index.html
+++ b/index.html
@@ -5,9 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
     
+    
+</head>
+
+<body>
+    <section id="first-section">
+
+        <div >
+            <h1 id="first-h1">
+                <span class="text-highlight">Skip</span> <span class="text-color">The Diet,<br> 
+                Just Eat Healthy <br>
+                With Food Network </span>
+            </h1>
+
+            <p class="paragraph-color">
+                Imagine you don't need a diet because we provide<br> 
+                healthy and delicious food for you!
+            </p>
+
+            <button class="button-decoration">
+                Order Food
+            </button>
+        </div>
+
+        <div>
+            <img id="first-div-image" src="images/female/Group 8425.png" alt="">
+        </div>
+
+    </section>
+
+
+    <section id="second-section">
+
+        <div>
+            <img id="second-div-image" src="images/female/person-image.png" alt="">
+        </div>
+
+        <div id="second-section-second-div">
+            <h2 class="text-color">About Me</h2>
+
+            <p class="paragraph-color">I am Chef Asif Zaman <br>I have good knowledge to cook Thai, Indian, Bangla food. <br>I am also an expert on food decoration<br>Here you can see some of my cooking samples.</p>
+
+            <button class="button-decoration">Contact Me</button>
+        </div>
+    </section>
 </body>
+
 </html>
